Fixed bug not allowing header border to stretch across the screen.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,17 @@
-header {
-    border-bottom: 1px solid #d3d3d3;
-    margin-bottom: 0%;
-    margin: 0 auto;
+.header {
     position: sticky;
     top: 0;
     z-index: 1000;
     background-color: #FFF;
+    width: 100%;
+    border-bottom: 1px solid #d3d3d3;
+}
+.header-content {
+    margin: 0 auto;
+    max-width: 1200px;
+    /* display: flex; */
+    justify-content: space-between;
+    align-items: center;
 }
 .header--flex {
     display: flex;
